# OmniBrain

./: .gitignore  Dockerfile  HOW_TO_USE_CLAUDE.md  MANUAL_COMPLETO.md  NEXT_STEPS.md  PLAYBOOKS.md  QUICKSTART.md  README.md  SESSION_REPORT.md  TOOLS.md  TUTORIAL.md  docker-compose.yml
omnibrain-triad/: .env.example  README.md  bootstrap.py  pyproject.toml  ruff.toml
omnibrain-triad/configs/: routing.json  routing.yaml
omnibrain-triad/context-hub/: 00_HOME.md  README.md
omnibrain-triad/docs/: 00_overview.md  01_architecture.md  02_setup.md  03_daily_workflow.md  04_l1_l2_l3.md  05_change_package_spec.md  06_gate_spec.md  07_memory_spec.md  08_promotion_spec.md  09_mcp_optional.md  10_faq.md  11_strategy_merged.md  12_remote_policy.md  migration_byterover_cli_2.md
omnibrain-triad/project-template/: AGENTS.md  CLAUDE.md  README.md
omnibrain-triad/tests/: conftest.py  test_build_context_bundle.py  test_inbox_curator.py  test_lifecycle_simulation.py  test_make_change_package.py  test_preflight_check.py  test_recover_session.py  test_route_task.py  test_run_gate.py  test_search_memory.py  test_smoke_e2e.py  test_triad_stats.py  test_utils.py
omnibrain-triad/tools/: README.md  build_context_bundle.py  confidence_cascade.py  config.example.json  config_env.py  inbox_curator.py  install_pre_push_hook.py  l3_pre_push_guard.py  make_change_package.py  preflight_check.py  promote_to_obsidian.py  record_to_byterover.py  recover_session.py  route_task.py  run_gate.py  search_memory.py  start_task_flow.py  suggest_pattern.py  telemetry.py  triad_oracle.py  triad_stats.py  (+1 more)
(+59 files in other folders)
