[project]
name = "omnibrain-triad"
version = "1.0.0"
description = "Multi-agent governance framework for code quality with diff-first workflow"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
triad-preflight = "tools.preflight_check:main"
triad-route = "tools.route_task:main"
triad-bundle = "tools.build_context_bundle:main"
triad-change = "tools.make_change_package:main"
triad-gate = "tools.run_gate:main"
triad-recover = "tools.recover_session:main"
triad-flow = "tools.start_task_flow:main"
triad-stats = "tools.triad_stats:main"
triad-search = "tools.search_memory:main"
triad-curate = "tools.inbox_curator:main"
triad-suggest = "tools.suggest_pattern:main"
triad-oracle = "tools.triad_oracle:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q"

# Ruff configuration lives in ruff.toml (single source of truth)
